[project]
name = "langgraph-lite-cron"
version = "0.0.1"
description = "langgraph lite cron"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ykoh42" }]
keywords = ["langgraph", "cron", "ambient", "agent", "scheduler"]
dependencies = [
    "apscheduler==4.0.0a6",
    "asyncpg>=0.30.0",
    "cbor2>=5.6.5",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "langgraph-sdk>=0.2.0",
    "psycopg2-binary>=2.9.10",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.42",
    "tzdata>=2025.2",
]

[project.urls]
Repository = "https://github.com/ykoh42/langgraph-lite-cron"
Issues = "https://github.com/ykoh42/langgraph-lite-cron/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "httpx",
    "uvicorn",
    "pytest-asyncio"
]

[tool.hatch.build]
exclude = [
    "tests/",
    ".github/",
    ".venv*/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_lite_cron"]

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]
line-length = 88
